# spin-mqtt-booth-volume-app

./: Makefile  README.md  spin.toml
api/: Cargo.toml  package-lock.json
api-rust/src/: api.rs
api/src/: handlers.ts  index.ts  lib.rs  utils.rs  utils.ts
frontend/: _index.html  app.js  index.html  styles.css
frontend-customization/: package-lock.json  package.json
frontend-customization/src/: index.ts
frontend-personalization/: Cargo.toml
frontend-personalization/src/: lib.rs
mqtt-message-persister/: migration.up.sql
mqtt-message-persister/src/: lib.rs
personalization-rust/: Cargo.toml
personalization-rust/src/: lib.rs
sound-sensor/: README.md
sound-sensor/mqttsound/: mqtt_secrets.h  mqttsound.ino
spinkube/: app-deploy.yaml  spinapp.yaml
